--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,6 @@
     scroll-behavior: smooth;
 }
 
-html, body {
-    overflow-x: hidden;
-}
-
 body {
     font-size: var(--root-font-size);
     font-family: Arial, Helvetica, sans-serif;
